force-app/main/default/objects/tgn__Test_Class__c/tgn__Test_Class__c.object-meta.xml
<CustomObject>
    <label>Test Class</label>
    <nameField>
        <label>Test Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>