force-app/main/default/objects/tgn__Test_Class__c/fields/tgn__Apex_Class_Id__c.field-meta.xml
<CustomField>
    <fullName>tgn__Apex_Class_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Apex Class Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>