force-app/main/default/objects/tgn__Test_Class__c/fields/tgn__Apex_Resource_Id__c.field-meta.xml
<CustomField>
    <fullName>tgn__Apex_Resource_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Apex Resource Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>