force-app/main/default/objects/tgn__Test_Class__c/fields/tgn__Code_Coverage__c.field-meta.xml
<CustomField>
    <fullName>tgn__Code_Coverage__c</fullName>
    <label>Code Coverage</label>
    <precision>6</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>