force-app/main/default/objects/tgn__Test_Class__c/fields/tgn__Code_Lines__c.field-meta.xml
<CustomField>
    <fullName>tgn__Code_Lines__c</fullName>
    <label>Code Lines</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>