force-app/main/default/objects/tgn__Test_Class__c/fields/tgn__Debug_Log__c.field-meta.xml
<CustomField>
    <fullName>tgn__Debug_Log__c</fullName>
    <label>Debug Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>