force-app/main/default/objects/tgn__Test_Class__c/fields/tgn__End_Time__c.field-meta.xml
<CustomField>
    <fullName>tgn__End_Time__c</fullName>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>