force-app/main/default/objects/tgn__Test_Class__c/fields/tgn__Error_Code__c.field-meta.xml
<CustomField>
    <fullName>tgn__Error_Code__c</fullName>
    <label>Error Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>