force-app/main/default/objects/tgn__Test_Class__c/fields/tgn__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>tgn__Error_Message__c</fullName>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>