force-app/main/default/objects/tgn__Test_Class__c/fields/tgn__Generated_Date__c.field-meta.xml
<CustomField>
    <fullName>tgn__Generated_Date__c</fullName>
    <label>Generated Date</label>
    <type>DateTime</type>
</CustomField>