force-app/main/default/objects/tgn__Test_Class__c/fields/tgn__Is_Selected__c.field-meta.xml
<CustomField>
    <fullName>tgn__Is_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Selected</label>
    <type>Checkbox</type>
</CustomField>