force-app/main/default/objects/tgn__Test_Class__c/fields/tgn__Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>tgn__Modified_Date__c</fullName>
    <label>Modified Date</label>
    <type>DateTime</type>
</CustomField>