force-app/main/default/objects/tgn__Test_Class__c/fields/tgn__Name__c.field-meta.xml
<CustomField>
    <fullName>tgn__Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>