force-app/main/default/objects/tgn__Test_Class__c/fields/tgn__Process_Time__c.field-meta.xml
<CustomField>
    <fullName>tgn__Process_Time__c</fullName>
    <label>Process Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>