force-app/main/default/objects/tgn__Test_Class__c/fields/tgn__Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>tgn__Stack_Trace__c</fullName>
    <label>Stack Trace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>