force-app/main/default/objects/tgn__Test_Class__c/fields/tgn__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>tgn__Start_Time__c</fullName>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>