force-app/main/default/objects/tgn__Test_Class__c/fields/tgn__Status__c.field-meta.xml
<CustomField>
    <fullName>tgn__Status__c</fullName>
    <defaultValue>&apos;Pending&apos;</defaultValue>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>