force-app/main/default/objects/tgn__Test_Class__c/fields/tgn__Test_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>tgn__Test_Job_Id__c</fullName>
    <label>Test Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>