force-app/main/default/objects/tgn__Test_Class__c/fields/tgn__Tested_Date__c.field-meta.xml
<CustomField>
    <fullName>tgn__Tested_Date__c</fullName>
    <label>Tested Date</label>
    <type>DateTime</type>
</CustomField>