force-app/main/default/objects/tgn__Test_Class__c/fields/tgn__Token__c.field-meta.xml
<CustomField>
    <fullName>tgn__Token__c</fullName>
    <label>Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>