force-app/main/default/objects/tgn__Test_Class__c/fields/tgn__Type__c.field-meta.xml
<CustomField>
    <fullName>tgn__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ApexClass</fullName>
                <label>Apex Class</label>
            </value>
            <value>
                <fullName>ApexTrigger</fullName>
                <label>Apex Trigger</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>