force-app/main/default/objects/tgn__Test_Class__c/fields/tgn__Validation__c.field-meta.xml
<CustomField>
    <fullName>tgn__Validation__c</fullName>
    <label>Validation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>